Last tests with JDG 6.6/7.1